2023-10-27T00:58:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6661524306 # 1303
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
* notice: last 14d: unq all: 4 4165
* notice: prev accum: outdated-unq outdated-all / unq all: 1779 169167 / 1817 173590
* notice: next accum: outdated-unq outdated-all / unq all: 1782 169474 / 1817 173683
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -44 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-10-12] / [2023-10-13 2023-10-26]

2023-10-26T16:16:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6656896852 # 1302
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
* notice: last 14d: unq all: 4 4156
* notice: prev accum: outdated-unq outdated-all / unq all: 1779 169167 / 1817 173495
* notice: next accum: outdated-unq outdated-all / unq all: 1779 169167 / 1817 173590
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -93 / +3 +208 -0 -0 / 3 208
* notice: removed / changed dates: [] / [2023-10-12 2023-10-26]

2023-10-26T08:16:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6651331272 # 1301
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
* notice: last 14d: unq all: 4 4154
* notice: prev accum: outdated-unq outdated-all / unq all: 1779 169167 / 1814 173382
* notice: next accum: outdated-unq outdated-all / unq all: 1779 169167 / 1817 173495
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -1 -123 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-10-12 2023-10-26]

2023-10-26T00:57:58Z: