@@ -1,11 +1,11 @@
 {
-  "count": 4165,
+  "count": 4153,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-10-13T00:00:00Z",
-      "count": 257,
-      "uniques": 3
+      "count": 133,
+      "uniques": 2
     },
     {
       "timestamp": "2023-10-14T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-26T00:00:00Z",
       "count": 301,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-10-27T00:00:00Z",
+      "count": 112,
+      "uniques": 2
     }
   ]
 }
