@@ -1,3 +1,12 @@
+2023-10-27T08:16:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6664668901 # 1304
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
+* notice: last 14d: unq all: 4 4153
+* notice: prev accum: outdated-unq outdated-all / unq all: 1782 169474 / 1817 173683
+* notice: next accum: outdated-unq outdated-all / unq all: 1782 169474 / 1819 173795
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -124 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2023-10-13 2023-10-27]
+
 2023-10-27T00:58:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6661524306 # 1303
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
